<resources>
    <string name="app_name">SuperChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_create">Create</string>
    <string name="button_signout">Sign Out</string>
    <string name="button_signIn">Signing in?</string>
    <string name="button_signin">Sign In</string>
    <string name="button_register">Register?</string>
    <string name="title_signIn">Sign In</string>
    <string name="chats">Chats</string>
    <string name="superChat">SuperChat</string>
    <string name="toast_adding_yourself_not_possible">You are trying to add yourself, which is not possible</string>
    <string name="toast_user_exists">is already in your friend list</string>
    <string name="toast_user_doesnt_exists">The email you entered doesn\'t exist</string>
    <string name="toast_valid_email_password_needed">You have to enter a valid password, email &amp; a username</string>
    <string name="snack_internet_connected">Connection found</string>
    <string name="snack_internet_not_connected">Internet connection lost</string>
    <string name="settings">Settings</string>
</resources>