<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/goToSignInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/button_signIn"
            android:textColor="#369FEF"
            app:layout_constraintEnd_toEndOf="@+id/createBtn"
            app:layout_constraintStart_toStartOf="@+id/createBtn"
            app:layout_constraintTop_toBottomOf="@+id/createBtn" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/title_register"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/usernameTxt"
            app:layout_constraintStart_toStartOf="@+id/usernameTxt"
            app:layout_constraintTop_toBottomOf="@+id/usernameTxt" />

        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/emailTxt"
            app:layout_constraintStart_toStartOf="@+id/emailTxt"
            app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

        <Button
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/button_create"
            app:layout_constraintEnd_toEndOf="@+id/passwordTxt"
            app:layout_constraintStart_toStartOf="@+id/passwordTxt"
            app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>